# rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: ingest.py  main.py  rag_chain.py
frontend/: app.py
