[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI backend for Enterprise Document Q&A"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",    
    "langchain",
    "langchain-community",
    "faiss-cpu",           
    "pypdf",               
    "httpx",               
    "ddgs",                
    "python-dotenv"        
]